[gd_scene load_steps=25 format=3 uid="uid://ch24k0lq7ahp"]

[ext_resource type="PackedScene" uid="uid://3kidvivnys7h" path="res://scenes/player.tscn" id="1_bnq5u"]
[ext_resource type="Script" path="res://scenes/insidetower.gd" id="1_kkeke"]
[ext_resource type="Texture2D" uid="uid://dglswwtc0pwwy" path="res://tower.png" id="2_57dbu"]
[ext_resource type="Theme" uid="uid://babdwm0flbrd6" path="res://ScoreSize.tres" id="2_b6auk"]
[ext_resource type="Texture2D" uid="uid://bmxadfct0tyws" path="res://heart emoji.png" id="3_m42t1"]
[ext_resource type="Script" path="res://scenes/tower_quiz.gd" id="4_2cyqx"]
[ext_resource type="Script" path="res://scripts/quiz_ui.gd" id="5_3kwvc"]
[ext_resource type="StyleBox" uid="uid://b57oijho8rmej" path="res://normal_button_quiz.tres" id="6_ccnyg"]
[ext_resource type="StyleBox" uid="uid://buit2etobpl21" path="res://CorrectAnswerStyle.tres" id="7_12wse"]
[ext_resource type="StyleBox" uid="uid://bph3hfo4lpnd" path="res://WrongAnswerStyle.tres" id="8_62qth"]
[ext_resource type="StyleBox" uid="uid://dusrylw1u8v50" path="res://quiz_colours.tres" id="9_gxgof"]
[ext_resource type="Theme" uid="uid://dvcwjkyhd571w" path="res://fontsize.tres" id="10_3vgqh"]
[ext_resource type="Theme" uid="uid://cwvf7ri5yufgd" path="res://quiz_button_font_size.tres" id="11_x4pm4"]
[ext_resource type="Script" path="res://scenes/tower_exit.gd" id="12_irag7"]
[ext_resource type="Texture2D" uid="uid://kwn3323mh6hr" path="res://tower_exit.png" id="13_o0wyq"]
[ext_resource type="Script" path="res://scenes/tower_dialogue_trigger.gd" id="13_vw81m"]
[ext_resource type="Script" path="res://scenes/tower_dialogue_trigger_2.gd" id="14_kb8l1"]
[ext_resource type="AudioStream" uid="uid://bx1sa67l4q4kl" path="res://audio_tower_1.mp3" id="14_nap2a"]
[ext_resource type="AudioStream" uid="uid://bu3r58omjg67v" path="res://audio_tower_2.mp3" id="16_dbusy"]
[ext_resource type="AudioStream" uid="uid://bbfk3q7bxb5uc" path="res://audio_tower_4.mp3" id="17_ye4e6"]
[ext_resource type="AudioStream" uid="uid://dpmgc1ud1if3x" path="res://audio_tower_3.mp3" id="19_s0kim"]
[ext_resource type="Texture2D" uid="uid://cpwhx3p21488p" path="res://tower_quiz_sprite.png" id="21_4v2j4"]

[sub_resource type="Theme" id="Theme_lx2v5"]
default_font_size = 35

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4bdkh"]
size = Vector2(22.5313, 20)

[node name="Insidetower" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_kkeke")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -1151.0
offset_top = -644.0
offset_right = 3506.0
offset_bottom = 1954.0
color = Color(0.439216, 0.403922, 0.337255, 1)

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_left = 1151.0
offset_top = 644.0
offset_right = 3408.0
offset_bottom = 1879.0
texture = ExtResource("2_57dbu")
stretch_mode = 4

[node name="CharacterBody2D" parent="." instance=ExtResource("1_bnq5u")]
position = Vector2(1118, 82)
scale = Vector2(1.5, 1.5)

[node name="LabelAnchor" type="Node2D" parent="CharacterBody2D"]

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="CharacterBody2D/LabelAnchor"]
remote_path = NodePath("../../../World UI/UI position")
update_rotation = false
update_scale = false

[node name="World UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 3633.0
offset_top = 2132.0
offset_right = 3749.0
offset_bottom = 2172.0

[node name="UI position" type="Node2D" parent="World UI"]
position = Vector2(-2515, -2050)

[node name="Panel" type="Panel" parent="World UI/UI position"]
offset_left = 739.0
offset_top = -533.0
offset_right = 959.0
offset_bottom = -302.0
theme_override_styles/panel = ExtResource("9_gxgof")

[node name="Score" type="Label" parent="World UI/UI position/Panel" groups=["ScoreBox"]]
layout_mode = 0
offset_left = 29.0
offset_top = 37.0
offset_right = 190.0
offset_bottom = 117.0
theme = ExtResource("2_b6auk")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Lives" type="Label" parent="World UI/UI position/Panel" groups=["LivesBox"]]
layout_mode = 0
offset_left = 71.5
offset_top = 125.0
offset_right = 183.5
offset_bottom = 193.0
theme = ExtResource("2_b6auk")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Heart emoji" type="Sprite2D" parent="World UI/UI position/Panel" groups=["HeartEmoji"]]
position = Vector2(72.5, 162)
texture = ExtResource("3_m42t1")

[node name="Panel2" type="Panel" parent="World UI/UI position" groups=["PanelBox"]]
visible = false
offset_left = -944.0
offset_top = 382.0
offset_right = 941.0
offset_bottom = 527.0
theme_override_styles/panel = ExtResource("9_gxgof")

[node name="Label" type="Label" parent="World UI/UI position/Panel2" groups=["DialogueBox"]]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00265252
anchor_top = -0.0344828
anchor_right = -0.00265252
anchor_bottom = 0.124138
offset_left = 37.0
offset_top = 36.0
offset_right = 1858.0
offset_bottom = 96.0
theme = SubResource("Theme_lx2v5")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="QuizUI" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -1500.0
offset_right = 19.0
offset_bottom = -1480.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_3kwvc")
default_style = ExtResource("6_ccnyg")
correct_style = ExtResource("7_12wse")
wrong_style = ExtResource("8_62qth")

[node name="ColorRect" type="ColorRect" parent="QuizUI"]
layout_mode = 0
offset_left = -1000.0
offset_top = -554.0
offset_right = 1000.0
offset_bottom = 546.0

[node name="Panel" type="Panel" parent="QuizUI"]
layout_mode = 0
offset_left = -623.0
offset_top = -400.0
offset_right = 577.0
offset_bottom = 400.0
theme_override_styles/panel = ExtResource("9_gxgof")

[node name="Label" type="Label" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 58.0
offset_top = 118.0
offset_right = 1150.0
offset_bottom = 359.0
theme = ExtResource("11_x4pm4")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Button" type="Button" parent="QuizUI/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.015
anchor_bottom = 0.029
offset_left = 70.0
offset_top = 412.0
offset_right = 526.0
offset_bottom = 534.8
theme = ExtResource("10_3vgqh")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "A"

[node name="Button2" type="Button" parent="QuizUI/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.015
anchor_bottom = 0.029
offset_left = 660.0
offset_top = 412.0
offset_right = 1116.0
offset_bottom = 534.8
theme = ExtResource("10_3vgqh")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "B"

[node name="Button3" type="Button" parent="QuizUI/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.015
anchor_bottom = 0.029
offset_left = 70.0
offset_top = 596.0
offset_right = 526.0
offset_bottom = 718.8
theme = ExtResource("10_3vgqh")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "C"

[node name="Button4" type="Button" parent="QuizUI/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.015
anchor_bottom = 0.029
offset_left = 660.0
offset_top = 596.0
offset_right = 1116.0
offset_bottom = 718.8
theme = ExtResource("10_3vgqh")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "D"

[node name="TimerLabel" type="Label" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 956.0
offset_top = 29.0
offset_right = 1171.0
offset_bottom = 112.0
theme = ExtResource("10_3vgqh")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Lives" type="Label" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 72.5
offset_top = 30.0
offset_right = 184.5
offset_bottom = 98.0
theme = ExtResource("2_b6auk")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Heart emoji" type="Sprite2D" parent="QuizUI/Panel"]
position = Vector2(79.5, 67)
texture = ExtResource("3_m42t1")

[node name="Hint" type="Panel" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 348.0
offset_top = 56.0
offset_right = 848.0
offset_bottom = 556.0
theme_override_styles/panel = ExtResource("9_gxgof")

[node name="Label" type="Label" parent="QuizUI/Panel/Hint"]
layout_mode = 0
offset_left = 31.0
offset_top = 32.0
offset_right = 471.0
offset_bottom = 380.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Close Hint" type="Button" parent="QuizUI/Panel/Hint"]
layout_mode = 0
offset_left = 150.0
offset_top = 400.0
offset_right = 350.0
offset_bottom = 460.0
text = "Close Hint"

[node name="Hint Button" type="Button" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 72.0
offset_top = 371.0
offset_right = 172.0
offset_bottom = 402.0
text = "Hint"

[node name="Statistics" type="ScrollContainer" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 48.0
offset_top = 361.0
offset_right = 1153.0
offset_bottom = 750.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="Stats_Label" type="Label" parent="QuizUI/Panel/Statistics"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Exit" type="Button" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 1056.0
offset_top = 45.0
offset_right = 1156.0
offset_bottom = 105.0
theme_override_styles/normal = ExtResource("6_ccnyg")
text = "Exit"

[node name="Question Timer" type="Timer" parent="QuizUI"]
process_mode = 3

[node name="Global Timer" type="Timer" parent="QuizUI"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="QuizUI"]
bus = &"SFX"

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(1199, -3, 1028, -2, 1044, 55, 1031, 99, 979, 106, 869, 128, 866, 154, 832, 169, 792, 166, 686, 232, 649, 272, 686, 296, 698, 326, 630, 418, 573, 376, 522, 435, 492, 564, 482, 648, 477, 709, 551, 707, 568, 750, 596, 819, 608, 847, 517, 885, 511, 916, 552, 896, 578, 927, 538, 961, 546, 987, 574, 1008, 677, 923, 769, 1018, 725, 1079, 690, 1121, 830, 1182, 898, 1198, 885, 1230, 1120, 1231, 1726, 1235, 1820, 1048, 1861, 846, 1809, 606, 1727, 464, 1695, 458, 1672, 409, 1703, 394, 1572, 285, 1501, 239, 1479, 291, 1439, 319, 1395, 293, 1341, 247, 1312, 204, 1223, 174, 1245, 90, 1194, 99, 1188, 57, 1220, -1, 2291, 0, 2287, 1261, -50, 1284, -107, -94, 1210, -57)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(1173, 1007, 1203, 1022, 1259, 1049, 1376, 1030, 1450, 994, 1485, 933, 1527, 844, 1529, 713, 1468, 587, 1444, 565, 1444, 542, 1482, 556, 1520, 599, 1548, 663, 1575, 708, 1581, 795, 1565, 864, 1487, 1019, 1372, 1071, 1277, 1083, 1183, 1070, 1153, 1046, 1156, 1019, 1075, 1012, 1007, 1001, 925, 964, 873, 927, 803, 808, 773, 736, 772, 652, 780, 583, 793, 536, 843, 467, 905, 417, 966, 388, 992, 358, 1030, 318, 1077, 290, 1122, 287, 1159, 310, 1443, 533, 1437, 561, 1355, 487, 1291, 439, 1231, 411, 1158, 396, 1068, 399, 979, 414, 937, 433, 905, 457, 872, 498, 816, 567, 807, 613, 798, 681, 817, 764, 837, 822, 885, 907, 954, 956, 1041, 976, 1085, 995)

[node name="Tower Exit" type="Area2D" parent="."]
position = Vector2(1870, 1889)
script = ExtResource("12_irag7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tower Exit"]
position = Vector2(-750, -1849)
scale = Vector2(8, 8)
shape = SubResource("RectangleShape2D_4bdkh")

[node name="Exit" type="Sprite2D" parent="Tower Exit"]
position = Vector2(-765, -1835)
scale = Vector2(2.21655, 2.80749)
texture = ExtResource("13_o0wyq")

[node name="Label" type="Label" parent="Tower Exit"]
offset_left = -926.0
offset_top = -1675.0
offset_right = -653.0
offset_bottom = -1640.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="TowerDialogueTrigger" type="Area2D" parent="."]
scale = Vector2(5, 5)
audio_bus_name = &"Dialogue"
script = ExtResource("13_vw81m")
audio_stream = ExtResource("14_nap2a")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TowerDialogueTrigger"]
position = Vector2(-37.6, 169.4)
polygon = PackedVector2Array(237.8, -149, 244, -106.8, 252.4, -111.4, 260.4, -112.2, 267, -109.8, 270.6, -107, 282.2, -134.2, 286.8, -151, 284.8, -151.2, 270.6, -109.2, 267.6, -112.2, 263, -114.6, 258.4, -114.6, 252.4, -114, 244.8, -109.2, 239.8, -149.4)

[node name="TowerDialogueTrigger2" type="Area2D" parent="."]
scale = Vector2(5, 5)
audio_bus_name = &"Dialogue"
script = ExtResource("14_kb8l1")
audio_stream1 = ExtResource("16_dbusy")
audio_stream2 = ExtResource("17_ye4e6")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TowerDialogueTrigger2"]
position = Vector2(-203.6, 35.6)
polygon = PackedVector2Array(376.4, 201.6, 396, 161.6, 379.6, 150.6, 367.8, 133.8, 360.8, 119.2, 357.4, 106.6, 358.2, 90, 359.2, 81, 300.6, 81.6, 300.6, 85.8, 357.2, 83.4, 354.8, 92.4, 355.2, 107.2, 356.4, 118.4, 362.2, 130.4, 370.4, 143.8, 377.4, 152.6, 389.2, 159.6, 392.4, 161.6, 373.4, 201.6)

[node name="Tower Quiz" type="Area2D" parent="."]
position = Vector2(443, 1297)
scale = Vector2(5, 5)
audio_bus_name = &"Dialogue"
script = ExtResource("4_2cyqx")
audio_stream = ExtResource("19_s0kim")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Tower Quiz"]
position = Vector2(-560, 105.6)
polygon = PackedVector2Array(581.8, -224.6, 557.4, -220.2, 576.8, -170.8, 610.6, -139.8, 635, -132, 643.4, -145.8, 626.6, -161.8, 598, -187.8, 602, -219)

[node name="Sprite2D" type="Sprite2D" parent="Tower Quiz"]
visible = false
position = Vector2(42, -73.2)
scale = Vector2(0.471172, 0.45504)
texture = ExtResource("21_4v2j4")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Tower Quiz"]

[connection signal="pressed" from="QuizUI/Panel/Hint/Close Hint" to="QuizUI" method="_on_close_hint_pressed"]
[connection signal="pressed" from="QuizUI/Panel/Hint Button" to="QuizUI" method="_on_hint_button_pressed"]
[connection signal="pressed" from="QuizUI/Panel/Exit" to="QuizUI" method="_on_exit_pressed"]
[connection signal="timeout" from="QuizUI/Question Timer" to="QuizUI" method="_on_timer_timeout"]
[connection signal="mouse_entered" from="Tower Exit" to="Tower Exit" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Tower Exit" to="Tower Exit" method="_on_mouse_exited"]
[connection signal="body_entered" from="TowerDialogueTrigger" to="TowerDialogueTrigger" method="_on_body_entered"]
[connection signal="body_entered" from="TowerDialogueTrigger2" to="TowerDialogueTrigger2" method="_on_body_entered"]
[connection signal="mouse_entered" from="Tower Quiz" to="Tower Quiz" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Tower Quiz" to="Tower Quiz" method="_on_mouse_exited"]
